@@ -1,3 +1,4 @@
+* Add flat children option on location
 * Raise single warning for move without origin
 * Allow to set manual effective date on move
 * Improve computation of cost price
